# FastFly

./: .dockerignore  .env.example  .env.vercel.example  .gitignore  .vercelignore  CLAUDE.md  Claude_notes.md  DEPLOY-QUICKREF.md  DEPLOYMENT-FILES.md  DEPLOYMENT.md  Dockerfile  README.md  app.py  app_server.py  aqeel-branch-changes.md  build.bat  characterize_GRN_DNa02_pathway.py  configure_frontend.py  convert_flybody.py  deploy-ec2.sh  docker-compose.yml  download_connectome.py  download_metadata.py  ec2-setup.sh  flywire_sim.cu  flywire_sim.py  modal_app.py  nginx-config.md  pyproject.toml  requirements.txt  run_experiments.py  sim_engine.py  start-local.sh  torch_engine.py  valency computer.txt  vercel.json
.claude/: settings.local.json
nourse_model/: .gitignore  2025_10_23_Drosophila_brain_model_v2.ipynb  README.md  requirements.txt  requirements_dev.txt
nourse_model/results/brian_data/: P9_LC4s.parquet  P9s_100Hz_b.parquet  Sugar_200Hz.parquet  Sugar_and_bitter.parquet  df_rate.csv
nourse_model/results/neuron_brian_v_torch/: brian_results.pkl  poisson_spikes.pkl
nourse_model/results/torch_data/: P9_JO_CE_bilateral  P9_JO_CE_bilateral.parquet  P9_LC4s.parquet  P9s_100Hz_b.parquet  Sugar_200Hz.parquet  df_rate.csv  (+1 more)
nourse_model/scripts/: 0_hello_world.ipynb  0_hello_world.py  1_batch_1.ipynb  2_brian_comparison.ipynb
nourse_model/src/: models.py  utils.py
static/: api-config-example.html  config.js  index.html  io_analysis.html  io_analysis_torch.html  neurons.json
static/models/: flybody.json
tests/: conftest.py  test_pathways.py  tune_network.py
